# SBOM-TM

./: .gitignore  .sbom-ci.yml  Dockerfile  Makefile  README.md  _sbom_diff.json  action.yml  build-log.txt  default_sbom_diff.json  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  sbom.json
.github/workflows/: publish-ghcr.yml  publish.yml  release-publish-and-update-action.yml  sbom-diff.yml  sbom-scan.yml  sbom-security.yml
data/sboms/: sample_app.json  sample_context.json
rules/: base_rules.json  dynamic_rules.json  static_rules.json
sbom-report/: sample-app_scan_report.html  sample-app_scan_report.json  sample-app_scan_report.md  voila_scan_report.html  voila_scan_report.json  voila_scan_report.md
scripts/: build-and-push.ps1
src/: main.py
src/sbom_tm/: __init__.py  api.py  cli.py  config.py  config_ci.py  context_generator.py  context_loader.py  models.py  report_builder_scan.py  sbom_loader.py  scorer.py  service.py  threatintel_enricher.py  trivy_client.py
tests/: test_context_generator.py  test_rule_evaluator.py  test_scorer.py
