[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-tm"
version = "0.1.0"
description = "Standalone SBOM threat modelling app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "typer>=0.12",
  "sqlmodel>=0.0.14",
  "jinja2>=3.1",
  "python-dotenv>=1.0",
  "requests>=2.31",

  # missing runtime libs
  "packaging>=23.0",
  "pydantic>=2.0",
  "rich>=13.0"
]
[project.scripts]
sbom-tm = "sbom_tm.cli:app"

[tool.typer]
app = "sbom_tm.cli:app"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []
[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
sbom_tm = ["templates/*.j2", "templates/**/*.j2"]